--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "next": "13.4.3",
-    "postcss": "8.4.23",
+    "next": "^14.2.5",
+    "postcss": "^8.4.41",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
